<resources>
    <string name="app_name">AndroidProject2024</string>
    <string name="login_label">login</string>
    <string name="email_label">Email</string>
    <string name="enter_your_email_login_page">enter_your_email</string>
    <string name="password_login_page">password</string>
    <string name="enter_your_password_login_page">enter_your_password</string>
    <string name="login_bt_login_page">login</string>
    <string name="or_sign_up_using_label_login_page">or_sign_up_using</string>
    <string name="sign_up_bt_login_page">sign_up</string>
    <string name="remember_me_login">Remember me</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="sign_up_Text_up">Sign Up</string>
    <string name="sign_up_as_renter_Btn_1">Sign Up As Renter</string>
    <string name="sign_up_as_company_btn_1">Sign Up As Company</string>
    <string name="login_here_text_1">login Here</string>
    <string name="sign_up_as_rental_text_123">Sign Up</string>
    <string name="full_name_sign_up__As_Rental">Full Name</string>
    <string name="full_name_text_above_rental_sign">Full Name</string>
    <string name="email_for_textView_sign_as_rental">Email</string>
    <string name="phone_number_AsRental_Sign_up">Phone Number</string>
    <string name="password_1_as_rental_text">password</string>
    <string name="password_for_editText_AsRental_Sign_UP">Password</string>
    <string name="confirm_password_as_rental_text_Sign_up">Confirm Password</string>
    <string name="confirm_password_for_editText_AsRental_Sign_UP">Confirm Password</string>
    <string name="sign_up_as_Rental_btn_00">Sign Up</string>
    <string name="already_have_an_account_as_Rental_Sign_up">Already have an account?</string>
    <string name="login_as_rental_Sign_up">login</string>
    <string name="email____edit_text_hint_sign_up_as_rental">Email</string>
    <string name="phone_number_edit_text_hint_sing_up_as_rental">Phone Number</string>
    <string name="title_activity_sign_up_as_company">SignUpAsCompanyActivity</string>
    <string-array name="city_array">
        <item>Jerusalem</item>
        <item>Hebron</item>
        <item>Nablus</item>
        <item>Ramallah</item>
        <item>Bethlehem</item>
        <item>Jenin</item>
        <item>Tulkarm</item>
        <item>Jericho</item>
        <item>Salfit</item>
        <item>Qabatiya</item>
        <item>Anata</item>
        <item>Bayt Sahur</item>
        <item>Tubas</item>
        <item>Ramla</item>
        <item>Lod</item>
        <item>Beit Ur al-Tahta</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_as_Company_text_above_page_123">Sign Up</string>
    <string name="company_name_Sign_upAS_cOMPANY">Company Name</string>
    <string name="company_name_edit_text_SignAs_company">Company Name</string>
    <string name="phone_number_AsCompany_Sign">Phone Number</string>
    <string name="phone_number_hint_As_company">Phone Number</string>
    <string name="country_for_Company_sign_up">Country</string>
    <string name="palestine_text_for_edit_text_as_company">palestine</string>
    <string name="city_of_company_sign_up">City</string>
    <string name="email_for_company_signup">Email</string>
    <string name="password_for_company_sign_up_textveiw">Password</string>
    <string name="password_for_company_edit_text_sign_up">Password</string>
    <string name="confirm_password_textView_for_company_sign_up">Confirm Password</string>
    <string name="confirm_password_for_company_sign_up_edit_text">Confirm Password</string>
    <string name="sign_up_as_company_sign_up_text">Sign Up</string>
    <string name="already_have_an_account_as_company_sign_up_text">Already have an account?</string>
    <string name="add_admin_mit_admin_page">Add Admin</string>
    <string name="full_name_for_admin_text_mit">Full Name</string>
    <string name="full_name_edit_text_mit_for_Admin_page">Full Name</string>
    <string name="email_for_admin_text_mitk_adminPage">Email</string>
    <string name="email_edit_text_for_Admin_page_mitk">Email</string>
    <string name="password_text_view_for_add_admin_mitk">Password</string>
    <string name="password_for_admin_add_mit_123">Password</string>
    <string name="confirm_password_add_admin_mit_">Confirm Password</string>
    <string name="confirm_password_add_admin_mit">Confirm Password</string>
    <string name="add_admin_btn_mit_page">Add Admin</string>
    <string name="edit_profile_btn_for_admin">Edit profile</string>
    <string name="our_app_customers_admin_mit_12344">Our App Customers</string>
    <string name="delete_customer_admin_mit_32131">Delete Customer</string>
    <string name="our_company_app_Activity_mange_mit">Our Company APP</string>
    <string name="delete_company_mit_mange_admin">Delete Company</string>
    <string name="back_btn_company_mange_admin_mit">Back</string>
    <string name="todo">TODO</string>
    <string name="continue_str">CONNECT</string>
    <string name="signIn_text">Hello There,\nWelcome Back</string>
    <string name="signIn">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="connectSlogan">Capital Cars</string>
    <string name="sign_in_message">Sign in to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="signup_loginScreen_message">Don\'t have an account? Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here.</string>
    <string name="create_an_account_to_get_started">Create an account to get started</string>
    <string name="phone_number">Phone Number</string>
    <string name="price">Price:</string>
    <string name="_2020_bugatti_chiron">2020 Bugatti Chiron</string>
    <string name="bugatti">Bugatti</string>
    <string name="_2024_11_1">2024/11/1</string>
    <string name="year">Year:</string>
</resources>