<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivitySign12"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SignUpAsActivity">


    <TextView
        android:text="@string/sign_up_Text_up"
        style="@style/text_style"/>

    <Button
        android:id="@+id/AsRenterBtn"
        style="@style/login_button"
        android:text="@string/sign_up_as_renter_Btn_1"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/AsCompanyBtn"
        style="@style/login_button"
        android:text="@string/sign_up_as_company_btn_1"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/already_have_an_account_text"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/loginbtn_sign_up_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFFFF"
        android:text="@string/login_here_text_1"
        android:textColor="#000000"
        app:iconSize="18dp"

        />
</androidx.appcompat.widget.LinearLayoutCompat>