<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_views"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="18dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageCar_Company"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="CarImage"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/carModel_Company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2020_bugatti_chiron"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/carMake_Company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bugatti"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/carPrice_Company"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:text="10000$"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2_Company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/year"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/carYear_Company"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/_2024_11_1"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>

